--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 
+
+ <script src="script.js" defer></script>
+
 </head>
-<body>
+<body id="section1">
 	<input type="checkbox" id="bg-togller">
 	<input type="checkbox" id="nav-togller">
 
@@ -46,14 +49,15 @@
 			<label class="mobile-togller" for="nav-togller">
 				<span></span>
 				<span></span>
-				<span></span>
+				<span ></span>
 			</label>
 		</div>
 
 	</nav>
 
 	<header class="header" >
-		<img src="Images/Header3.PNG" alt="Our Header" id="section1">
+		<img src="Images/Header3.PNG" alt="Our Header" >
+        <img src="Images/Header3.PNG" alt="Our Header" >
         <span ></span>
 		<h1 class="d-mode" style="font-size: 3em;" >Welcome to Robotics in Africa Forum at IROS 2024</h1>
 		<h1 class="b-mode" style="font-size: 3em;">Welcome to Robotics in Africa Forum at IROS 2024</h1>
