--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 	</nav>
 
-	<header class="header" >
+	<header class="header" >This is a header
 		<img src="Images/Header3.PNG" alt="Our Header" >
         <img src="Images/Header3.PNG" alt="Our Header" >
         <img src="Images/Header3.PNG" alt="Our Header" >
