--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
 
 
                 
-                <img src = "images/Chinwe.png" alt="image" >
+               <span> <img src = "images/Chinwe.png" alt="image" ></span>
                 <div class="text">
                     <h3>Dr Chinwe Ekenna</span></h3>
                     <p> Dr. Chinwe Ekenna is an Associate Professor in the Department of Computer Science at the University at Albany, State University of New York, and the <a href = "https://www.albany.edu/computer-science/faculty/chinwe-ekenna" class="director-link">Director of the Robotics, Algorithm and Computable Systems (RACS) Laboratory.</a> Dr. Ekenna is a faculty advisor for UAlbany's student chapter of the Association for Computing Machinery-Women (ACM-W) and participates in publicly engaged activities which encourage young women in STEM. One such activity was the Meet the Women in Robotics Workshop (WiRW) at the 2019 Robotics: Science and Systems Conference (R:SS) on June 23, 2019, which she presented with researchers from the U.S. Air Force Academy. The workshop was designed to raise the visibility of women in robotics, strengthen the community of female roboticists by bringing together women from various disciplines and subfields in robotics, provide opportunities for networking, and connect junior female robotics researchers to senior mentors in the field. The workshop was funded by the National Science Foundation.  </p>
