--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	</nav>
 
 	<header class="header" >This is a header
-		<img src="Images/Header3.PNG" alt="Our Header" >
+		<img src="../Images/Header3.PNG" alt="Our Header" >
         <img src="Images/Header3.PNG" alt="Our Header" >
         <img src="Images/Header3.PNG" alt="Our Header" >
         <img src="Images/Header3.PNG" alt="Our Header" >
