--- a/index.html
+++ b/index.html
@@ -55,13 +55,9 @@
 
 	</nav>
 
-	<header class="header" >This is a header
+	<header class="header" >
 		<img src="../Images/Header3.jpg" alt="Our Header" >
-        <img src="Images/Header3.PNG" alt="Our Header" >
-        <img src="Images/Header3.PNG" alt="Our Header" >
-        <img src="Images/Header3.PNG" alt="Our Header" >
-        <img src="Images/Header3.PNG" alt="Our Header" >
-        <img src="Images/Header3.PNG" alt="Our Header" >
+       
         <span ></span>
 		<h1 class="d-mode" style="font-size: 3em;" >Welcome to Robotics in Africa Forum at IROS 2024</h1>
 		<h1 class="b-mode" style="font-size: 3em;">Welcome to Robotics in Africa Forum at IROS 2024</h1>
