--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
 
 
                 
-               <span> <img src="Images/Chinwe.png" alt="Ekenna" width="90%" height="40%"></span>
+               <span> <img src="Images/Chinwee.png" alt="Ekenna" width="90%" height="40%"></span>
 
                 <div class="text">
                     <h3>Dr Chinwe Ekenna</span></h3>
@@ -591,9 +591,9 @@ Trinity College Dublin, Ireland.
                                         <table style="width: 100%; border-collapse: collapse; margin: 20px 0; font-family: Arial, sans-serif; font-size: 14px;">
         <thead>
             <tr>
-                <th style="border: 1px solid black; padding: 8px 12px; background-color: #f2f2f2;">Paper ID</th>
-                <th style="border: 1px solid black; padding: 8px 12px; background-color: #f2f2f2;">Paper Title</th>
-                <th style="border: 1px solid black; padding: 8px 12px; background-color: #f2f2f2;">Authors</th>
+                <th style="border: 1px solid black; padding: 8px 12px; background-color:#0E1257; text-align:    center;">Paper ID</th>
+                <th style="border: 1px solid black; padding: 8px 12px; background-color: #0E1257; text-align:    center;">Paper Title</th>
+                <th style="border: 1px solid black; padding: 8px 12px; background-color:#0E1257; text-align:    center;">Authors</th>
             </tr>
         </thead>
         <tbody>
@@ -680,13 +680,13 @@ Trinity College Dublin, Ireland.
                                  <div class="content-txt">
                     <div class="content-txt-main">
                         <div class="this-anim">
-                            <span style="text-align:center;"><span id="contact"></span>Contact Us</span>
+                            <span style="text-align:center; padding-top:    0px;"><span id="contact"></span>Contact Us</span>
                             <span style="text-align:center;">Contact Us</span>
                         </div>
                         
                         <p style="text-align: center; font-size: 16px; color: #333;">
                             If you have any questions, please contact us at 
-                             <a href="mailto:roboticsinafrica@gmail.com" style="color: blue; text-decoration: none;">roboticsinafrica@gmail.com</a>.
+                             <a href="mailto:roboticsinafrica@gmail.com" style="color: blue; text-decoration: none;">africarobotics@gmail.com</a>.
 
                         </div>
 
